--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "src/app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node src/app.js",
+    "start": "node src/index.js",
     "bdev:watch": "node --env-file=.env --watch src/index.js ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
